# bigfoot

./: README.md  docker-compose.yaml
.upsun/: config.yaml
new/: .gitignore  Dockerfile
new/bigfoot/: admin.py  models.py
new/bigfoot_django/: settings.py
old/: pyproject.toml
old/bigfoot/: admin.py
