[tool.poetry]
name = "bigfoot-django"
version = "0.1.0"
description = ""
authors = ["Antonis Kalipetis <antonis.kalipetis@platform.sh>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
blackfire = "^1.20.19"
django = "^5.0.6"
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.9"
platformshconfig = "^2.4.0"


[tool.poetry.group.dev.dependencies]
faker = "^25.2.0"
black = "^24.4.2"
pylint = { extras = ["django"], version = "^3.2.2" }
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
